# incident-response

./: README.md  azure-pipelines-1.yml  azure-pipelines-2.yml  azure-pipelines-3.yml  azure-pipelines-4.yml  azure-pipelines.yml  main.py  pyproject.toml  requirements.txt
a_analytics/: apps.py  filters.py  forms.py  urls.py  views.py
a_analytics/templates/a_analytics/: dashboard.html
a_auth/: apps.py  urls.py  views.py
a_core/: settings.py  urls.py
a_incidents/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
a_incidents/migrations/: 0001_initial.py  0002_incident_offender_name.py  0002_incident_severity_alter_incident_offenders.py  0002_remove_incident_offender_name_incident_incident_type_and_more.py  0003_incident_venue.py  0004_incident_ban_incident_warning.py  0005_alter_incident_ban_alter_incident_warning.py  0006_alter_incident_ban_alter_incident_warning.py  0007_incident_offender_alter_incident_offender_name.py
a_logs/: apps.py  filters.py  forms.py  tests.py  urls.py  views.py
a_notifications/: __init__.py  admin.py  models.py  utils.py  views.py
a_notifications/migrations/: 0001_initial.py
a_offenders/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
a_offenders/migrations/: 0001_initial.py  0002_ban_warning_incidentoffender.py  0002_warning_ban_incidentoffender.py  0003_alter_incidentoffender_unique_together_and_more.py
a_reports/: apps.py  urls.py  views.py
a_venues/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
a_venues/migrations/: 0001_initial.py
(+21 files in other folders)
